# snoopy

./: .gitignore  Cargo.toml  README.md  install.sh  pyproject.toml  pyrightconfig.json  uninstall.sh
.github/workflows/: ci.yml
benchmarks/: bench_parsers.py
docs/: LOGGING_IMPROVEMENT_PROPOSAL.md  MAIL_COLLECTOR_PLAN.md
examples/: daily_summary.py  focus_score.py  location_history.py  screen_time.py  weekly_report.py
helpers/: calendar_helper  calendar_helper.swift  chrome_helper  chrome_helper.swift  dock_helper  dock_helper.swift  slack_helper  slack_helper.swift  whatsapp_helper  whatsapp_helper.swift
helpers/CalendarHelper.app/Contents/: Info.plist
helpers/CalendarHelper.app/Contents/MacOS/: calendar_helper
linus/: clean.py  dataset.py  sync.py  train.py
scripts/: build_next_action_dataset.py  collect_mail_report.py  debug_mail_schema.py  explore_mail_schema.py  read_latest_emails.py
snoopy/: __init__.py  _native.py  _python_parsers.py  buffer.py  cli.py  config.py  daemon.py  db.py  hooks.py  menubar.py
snoopy/collectors/: applifecycle.py  audio.py  base.py  battery.py  browser.py  calendar.py  claude.py  clipboard.py  dock.py  filesystem.py  location.py  mail.py  media.py  messages.py  network.py  notes.py  notifications.py  oura.py  pagecontent.py  reminders.py  shell.py  slack.py  system.py  whatsapp.py  wifi.py  window.py  zoom.py
src/: lib.rs
tests/: test_applifecycle.py  test_audio.py  test_base_collector.py  test_battery.py  test_browser.py  test_buffer.py  test_calendar.py  test_claude.py  test_db.py  test_dock.py  test_location.py  test_media.py  test_messages.py  test_network.py  test_notes.py  test_oura.py  test_pagecontent.py  test_reminders.py  test_shell.py  test_slack.py  test_sync.py  test_system.py  test_whatsapp.py  test_wifi.py  test_zoom.py
