[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "snoopy"
version = "0.1.0"
description = "macOS activity collection daemon"
requires-python = ">=3.11"
dependencies = [
    "pyobjc-framework-Cocoa",
    "pyobjc-framework-Quartz",
    "pyobjc-framework-CoreLocation",
    "pyobjc-framework-FSEvents",
]

[project.scripts]
snoopy = "snoopy.cli:main"
snoopy-hook = "snoopy.hooks:main"
snoopy-menubar = "snoopy.menubar:main"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "snoopy_native"
python-packages = ["snoopy"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "maturin",
    "modal",
    "pytest",
    "ruff",
    "ty",
]
train = [
    "mlx>=0.22",
    "mlx-lm>=0.28",
    "wandb",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/test_system.py" = ["E402"]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
# PyObjC frameworks (Quartz, AppKit, FSEvents) use dynamic binding;
# ty cannot resolve their attributes at analysis time.
unresolved-attribute = "ignore"
unresolved-import = "ignore"
